tests/compile_time_tests/tag_attribute_case_argument_is_not_string_literal.stderr
error: right handside of the assignment expression is expected to be a string literal "lower" or "upper"
 --> tests/compile_time_tests/tag_attribute_case_argument_is_not_string_literal.rs:5:18
  |
5 |     #[tag(case = 1)]
  |                  ^
